Overflow bug fixed, WhiteSpace bug fixed, Two notes with the same name bug fixed

--- a/style.css
+++ b/style.css
@@ -68,6 +68,8 @@ h2,
 p {
     font-size: 100%;
     font-weight: normal;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 ul,
